# MMfem

./: FEMSpaces.py  LICENSE  README.md  adapt.py  adaptive_results.tex  evolutive.py  interactive_notebook.ipynb  mmfem_cli.py  problems.py  pyproject.toml  requirements.txt  results.txt  run.py  run_adapt.py  run_evolutive.py  solvers.py  triangulation.py  unsteady_implementation.md  unsteady_tutorial.ipynb  visualitation_guide.md
MMfem/: Manifest.toml  Project.toml
MMfem/docs/: make.jl
MMfem/src/: MMfem.jl
Package_prueba/MMfem/: Manifest.toml
docs/source/: conf.py  index.rst  problems.rst  solvers.rst
examples/: adaptative_example.py  cavity_animation.pvd  graphics_order_convergence.py  lid_driven_cavity.py  mini-elements.txt  mini-elements_01.txt  non_regular_data.py  p1p1.txt  p1p1_01.txt  simple_unsteady.py  taylor-hood.txt  taylor-hood_01.txt  unsteady_lid_drive_cavity.py
examples/vtk_output/: cavity_animation_0000.vtu  cavity_animation_0001.vtu  cavity_animation_0002.vtu  cavity_animation_0003.vtu  cavity_animation_0004.vtu  cavity_animation_0005.vtu  cavity_animation_0006.vtu  cavity_animation_0007.vtu  cavity_animation_0008.vtu  cavity_animation_0009.vtu  cavity_animation_0010.vtu  cavity_animation_0011.vtu  cavity_animation_0012.vtu  (+88 more)
previos/: NS.ipynb  academic.css  build_doc.py  problems.py  run.py  spaces.py  template.html  triangulation.py  utils.html  utils.py
project_v0.1/: MMfem.jl  poisson.jl  stokes.ipynb  stokes.jl
project_v0.2/: MM_adapt.jl  MM_mixedfem.jl  NavierStokes.jl  adapt.jl  afem.jl
src/mmfem/: mesh.py  (+8 more)
tests/: test_mesh.py
(+11 files in other folders)
