[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MMfem"
version = "0.2.0"
description = "Finite Element solver for Navier–Stokes using NGSolve"
authors = [
  { name = "Mauricio Mendiluce" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
